--- a/renderer/html/stats.html
+++ b/renderer/html/stats.html
@@ -6,23 +6,32 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self'" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="../css/styles.css" />
-    <script src="../js/renderer.js" defer></script>
+    <script src="../js/stats.js" defer></script>
     <title>statistics</title>
 </head>
-<body>
+<body id="stats-page">
     <!-- nave / menu / title bar for app -->
     <nav class="nav-wrapper"> 
         <div class="nav-files icon-img no-drag"><div></div></div>
         <div class="nav-stats icon-img no-drag"><div></div></div>
         <div class="nav-settings icon-img no-drag"><div></div></div>
         <div class="nav-drag icon-img drag"></div>
-        <div class="nav-reload icon-img no-drag"><div></div></div>
         <div class="nav-min icon-img no-drag"><div></div></div>
         <div class="nav-close icon-img no-drag"><div></div></div>
     </nav>
     
-    <div>statistics page</div>
+    <div class="container-main">
+        <div class="main-spacer"></div>
+    </div>
+
+    <!-- begin displaying statistics element -->
+    <div class="container-main">
+        <div class="main-h3-top">statistics Page</div>
+    </div> 
+    <div class="container-main-wide">
+        <div id="path-drop" class="main-p-even-small">coming soon...</div>
+    </div>
 </body>
 </html>
