--- a/renderer/html/index.html
+++ b/renderer/html/index.html
@@ -6,23 +6,57 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self'" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="../css/styles.css" />
-    <script src="../js/renderer.js" defer></script>
+    <script src="../js/index.js" defer></script>
     <title>files</title>
 </head>
-<body>
+<body id="files-page">
+
     <!-- nave / menu / title bar for app -->
     <nav class="nav-wrapper"> 
         <div class="nav-files icon-img no-drag"><div></div></div>
         <div class="nav-stats icon-img no-drag"><div></div></div>
         <div class="nav-settings icon-img no-drag"><div></div></div>
         <div class="nav-drag icon-img drag"></div>
-        <div class="nav-reload icon-img no-drag"><div></div></div>
         <div class="nav-min icon-img no-drag"><div></div></div>
         <div class="nav-close icon-img no-drag"><div></div></div>
     </nav>
 
-    <div>files page</div>
+    <!-- display search characters when actively searching -->
+    <div class="search-term"></div>
+
+  <div class="title-bar">
+    <div class="title-name">client</div>
+    <div class="title-dob">dob</div>
+    <div class="title-phone">phone</div>
+  </div>
+
+      <!-- template for clients -->
+  <div class="client-card-container" data-client-container>
+    <template data-client-template>
+      <div class="client-wrapper">
+        <div class="name" data-name>Name</div>
+        <div class="dob" data-dob>dob</div>
+        <div class="phone" data-phone>phone</div>
+        <div class="claims-container hide" data-claims-container>
+          <!-- displaying claim number and doi is done in index.js -->
+        </div>
+      </div>
+    </template>
+
+    <!-- display any notes (used when no search results available)-->
+    <div class="search-notes hide"></div>
+  </div>
+
+  <!-- footer for displaying client numbers -->
+  <div class="footer-wrapper">
+    <div class="client-count-total"></div>
+    <div class="client-count-unassigned"></div>
+    <div class="client-count-yahir"></div>
+    <div class="client-count-amber"></div>  
+    <div class="client-count-shirley"></div>
+  </div>
+
 </body>
 </html>
