add guide/shortcut instructions

--- a/renderer/html/settings.html
+++ b/renderer/html/settings.html
@@ -60,8 +60,58 @@
     <div class="container-main">
         <div class="main-h3-top">Guide/Shortcuts</div>
     </div>
-    <div class="container-main-wide">
-        <div class="main-p-even-small">coming soon...</div>
+    <div class="guide-wrapper">
+        <div class="guide-a">Show/Hide Claims</div>
+        <div class="guide-b">Left click on any empty space within client row</div>
+    </div>
+    <div class="guide-wrapper">
+        <div class="guide-a">Search</div>
+        <div class="guide-b">With window active start typing. See search query in upper right. Use backspace and delete key as normal</div>
+    </div>
+    <div class="guide-wrapper">
+        <div class="guide-a">Arrow Down/Up</div>
+        <div class="guide-b">While searching navigate clients using arrow up and down</div>
+    </div>
+    <div class="guide-wrapper">
+        <div class="guide-a">Open Sitch</div>
+        <div class="guide-b">Left click on client name or enter key client name is highlighted during search.</div>
+    </div>
+    <div class="guide-wrapper">
+        <div class="guide-a">Open Folder</div>
+        <div class="guide-b">Left click on client claim or shift + enter keys when client name is highlighted during search.</div>
+    </div>
+    
+    <div class="guide-wrapper">
+        <div class="guide-a">Copy Cliam Number</div>
+        <div class="guide-b">Right click on client claim number.</div>
+    </div>
+    <div class="guide-wrapper">
+        <div class="guide-a">Copy DOB</div>
+        <div class="guide-b">Right click on client date of birth.</div>
+    </div>
+
+    <div class="container-main">
+        <div class="main-spacer"></div>
+    </div>
+    <div class="container-main">
+        <div class="main-line"></div>
+    </div>
+    <div class="container-main">
+        <div class="main-spacer"></div>
+    </div>
+
+    <!-- about secton -->
+    <div class="container-main">
+        <div class="main-h3-top">About</div>
+    </div>
+    <div class="container-main">
+        <div class="main-p-even-small">
+            <p>Productivity tool created by Yahir -Enjoy.</p>
+        </div>
+    </div>
+
+    <div class="container-main">
+        <div class="main-spacer"></div>
     </div>
 
 </body>
