added dead clients to file explorer and fixed minor bugs

--- a/renderer/html/settings.html
+++ b/renderer/html/settings.html
@@ -106,7 +106,7 @@
     </div>
     <div class="container-main">
         <div class="main-p-even-small">
-            <p>Productivity tool created by Yahir -Enjoy.</p>
+            <p>Productivity tool created by Yahir -enjoy.</p>
         </div>
     </div>
 
